--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
   <style>
     body { font-family: 'Patrick Hand', cursive; background: #fbe9e9; padding: 20px; font-size: 20px; }
     h1 { text-align: center; color: #8b0000; font-size: 36px; }
+    #loginBox { text-align: center; margin-top: 50px; }
+    #loginBox input { padding: 12px; width: 220px; margin: 8px; font-size: 18px; }
+    #loginBox button { padding: 12px 18px; background: #8b0000; color: white; border: none; border-radius: 4px; cursor: pointer; font-size: 20px; }
     #addBtn { background: #8b0000; color: white; padding: 12px 18px; border: none; border-radius: 4px; cursor: pointer; display: block; margin: 0 auto 20px auto; font-size: 20px; }
     table { width: 100%; border-collapse: collapse; background: white; box-shadow: 0 2px 5px rgba(0,0,0,0.1); margin-top: 20px; font-size: 18px; }
     th, td { border: 1px solid #ddd; padding: 12px; text-align: left; }
@@ -22,8 +25,12 @@
   </style>
 </head>
 <body>
-  <h1>Sister Roommate Database</h1>
-  <div id="content">
+  <div id="loginBox">
+    <input type="password" id="sitePassword" placeholder="Enter password">
+    <button onclick="checkPassword()">Enter</button>
+  </div>
+  <div id="content" style="display:none;">
+    <h1>Sister Roommate Database</h1>
     <button id="addBtn">Post Listing</button>
     <table>
       <thead>
@@ -57,6 +64,14 @@
     </div>
   </div>
   <script>
+    function checkPassword() {
+      if (document.getElementById("sitePassword").value === "t@mums@25x!") {
+        document.getElementById("loginBox").style.display = "none";
+        document.getElementById("content").style.display = "block";
+      } else {
+        alert("Incorrect password.");
+      }
+    }
     const firebaseConfig = {
       apiKey: "AIzaSyApD08vFd-pktQ_WGolb-TzM3M4bkYZhIM",
       authDomain: "roomate-finder-e2832.firebaseapp.com",
