--- a/index.html
+++ b/index.html
@@ -22,10 +22,21 @@
     .close-btn { position: absolute; top: 10px; right: 10px; background: #8b0000; color: white; border: none; border-radius: 50%; width: 28px; height: 28px; font-size: 18px; cursor: pointer; }
     .delete-btn { background: #8b0000; color: white; border: none; padding: 10px 14px; border-radius: 4px; cursor: pointer; margin-top: 12px; font-size: 18px; }
     .modal-content input, .modal-content textarea { width: 100%; padding: 10px; margin: 6px 0; font-size: 18px; box-sizing: border-box; }
-  </style>
+  
+    .main-title {
+      font-size: 48px;
+      color: #8b0000;
+      text-align: center;
+      margin-bottom: 20px;
+      font-weight: bold;
+      letter-spacing: 1px;
+    }
+    </style>
 </head>
 <body>
   <div id="loginBox">
+    <h1 class="main-title">Sister Roommate Database</h1>
+    
     <input type="password" id="sitePassword" placeholder="Enter password">
     <button onclick="checkPassword()">Enter</button>
   </div>
