--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-database-compat.js"></script>
   <style>
     body { font-family: 'Patrick Hand', cursive; background: #fbe9e9; padding: 20px; font-size: 20px; }
-    h1 { text-align: center; color: #8b0000; font-size: 36px; }
+    h1 { text-align: center; color: #8b0000; font-size: 48px; font-weight: bold; letter-spacing: 1px; margin-bottom: 20px; }
     #loginBox { text-align: center; margin-top: 50px; }
     #loginBox input { padding: 12px; width: 220px; margin: 8px; font-size: 18px; }
     #loginBox button { padding: 12px 18px; background: #8b0000; color: white; border: none; border-radius: 4px; cursor: pointer; font-size: 20px; }
@@ -22,26 +22,15 @@
     .close-btn { position: absolute; top: 10px; right: 10px; background: #8b0000; color: white; border: none; border-radius: 50%; width: 28px; height: 28px; font-size: 18px; cursor: pointer; }
     .delete-btn { background: #8b0000; color: white; border: none; padding: 10px 14px; border-radius: 4px; cursor: pointer; margin-top: 12px; font-size: 18px; }
     .modal-content input, .modal-content textarea { width: 100%; padding: 10px; margin: 6px 0; font-size: 18px; box-sizing: border-box; }
-  
-    .main-title {
-      font-size: 48px;
-      color: #8b0000;
-      text-align: center;
-      margin-bottom: 20px;
-      font-weight: bold;
-      letter-spacing: 1px;
-    }
-    </style>
+  </style>
 </head>
 <body>
   <div id="loginBox">
-    <h1 class="main-title">Sister Roommate Database</h1>
-    
+    <h1>Sister Roommate Database</h1>
     <input type="password" id="sitePassword" placeholder="Enter password">
     <button onclick="checkPassword()">Enter</button>
   </div>
   <div id="content" style="display:none;">
-    <h1>Sister Roommate Database</h1>
     <button id="addBtn">Post Listing</button>
     <table>
       <thead>
@@ -61,6 +50,7 @@
           <input type="text" name="rent" placeholder="Rent">
           <input type="text" name="utilities" placeholder="Utilities">
           <textarea name="notes" placeholder="Notes / Roommate Preferences"></textarea>
+          <input type="text" name="secret" placeholder="Set a Secret Code" required>
           <input type="hidden" name="gender" value="female">
           <button type="submit">Submit</button>
         </form>
@@ -117,6 +107,7 @@
     });
     const tableBody = document.getElementById("submissions");
     let currentKey = null;
+    let currentEntrySecret = null;
     db.ref("submissions").on("value", (snapshot) => {
       tableBody.innerHTML = "";
       const submissions = snapshot.val();
@@ -134,17 +125,21 @@
       currentKey = key;
       db.ref("submissions/" + key).once("value").then((snapshot) => {
         const entry = snapshot.val();
+        currentEntrySecret = entry.secret;
         const detailDiv = document.getElementById("modalDetails");
         detailDiv.innerHTML = `<strong>Name:</strong> ${entry.name || ''}<br><strong>Email:</strong> ${entry.email || ''}<br><strong>Phone:</strong> ${entry.phone || ''}<br><strong>Semester:</strong> ${entry.semester || ''}<br><strong>Apt/Dorm:</strong> ${entry.apt || ''}<br><strong>Rent:</strong> ${entry.rent || ''}<br><strong>Utilities:</strong> ${entry.utilities || ''}<br><strong>Notes:</strong> ${entry.notes || ''}`;
         document.getElementById("detailModal").style.display = "block";
       });
     }
     document.getElementById("modalDeleteBtn").addEventListener("click", () => {
-      if (currentKey && confirm("Delete this entry?")) {
+      const enteredCode = prompt("Enter the secret code to delete this listing:");
+      if (enteredCode === currentEntrySecret) {
         db.ref("submissions/" + currentKey).remove().then(() => {
           alert("Deleted!");
           closeDetailModal();
         });
+      } else {
+        alert("Incorrect code. Cannot delete.");
       }
     });
   </script>
