--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           <input type="text" name="rent" placeholder="Rent">
           <input type="text" name="utilities" placeholder="Utilities">
           <textarea name="notes" placeholder="Notes / Roommate Preferences"></textarea>
-          <input type="text" name="secret" placeholder="Set a Secret Code" required>
+          <input type="text" name="secret" placeholder="PIN for deletion" required>
           <input type="hidden" name="gender" value="female">
           <button type="submit">Submit</button>
         </form>
