--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
   </div>
   <script>
     function checkPassword() {
-      if (document.getElementById("sitePassword").value === "t@mums@25x!") {
+      if (document.getElementById("sitePassword").value === "Tamusis25!") {
         document.getElementById("loginBox").style.display = "none";
         document.getElementById("content").style.display = "block";
       } else {
