--- a/index.html
+++ b/index.html
@@ -7,141 +7,16 @@
   <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap" rel="stylesheet">
   <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-database-compat.js"></script>
-  <style>
-    body { font-family: 'Patrick Hand', cursive; background: #fbe9e9; padding: 20px; font-size: 20px; }
-    h1 { text-align: center; color: #8b0000; font-size: 48px; font-weight: bold; letter-spacing: 1px; margin-bottom: 20px; }
-    #loginBox { text-align: center; margin-top: 50px; }
-    #loginBox input { padding: 12px; width: 220px; margin: 8px; font-size: 18px; }
-    #loginBox button { padding: 12px 18px; background: #8b0000; color: white; border: none; border-radius: 4px; cursor: pointer; font-size: 20px; }
-    #addBtn { background: #8b0000; color: white; padding: 12px 18px; border: none; border-radius: 4px; cursor: pointer; display: block; margin: 0 auto 20px auto; font-size: 20px; }
-    table { width: 100%; border-collapse: collapse; background: white; box-shadow: 0 2px 5px rgba(0,0,0,0.1); margin-top: 20px; font-size: 18px; }
-    th, td { border: 1px solid #ddd; padding: 12px; text-align: left; }
-    th { background: #c77b7b; color: white; }
-    .modal { display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.5); }
-    .modal-content { background: white; padding: 20px; border-radius: 8px; max-width: 450px; margin: 100px auto; position: relative; font-size: 18px; }
-    .close-btn { position: absolute; top: 10px; right: 10px; background: #8b0000; color: white; border: none; border-radius: 50%; width: 28px; height: 28px; font-size: 18px; cursor: pointer; }
-    .delete-btn { background: #8b0000; color: white; border: none; padding: 10px 14px; border-radius: 4px; cursor: pointer; margin-top: 12px; font-size: 18px; }
-    .modal-content input, .modal-content textarea { width: 100%; padding: 10px; margin: 6px 0; font-size: 18px; box-sizing: border-box; }
-  </style>
 </head>
 <body>
-  <div id="loginBox">
-    <h1>Sister Roommate Database</h1>
-    <input type="password" id="sitePassword" placeholder="Enter password">
-    <button onclick="checkPassword()">Enter</button>
-  </div>
-  <div id="content" style="display:none;">
-    <button id="addBtn">Post Listing</button>
-    <table>
-      <thead>
-        <tr><th>Name</th><th>Email</th><th>Phone</th><th>Semester</th><th>Apt/Dorm</th><th>Rent</th><th>Utilities</th><th>View</th></tr>
-      </thead>
-      <tbody id="submissions"></tbody>
-    </table>
-    <div class="modal" id="formModal">
-      <div class="modal-content">
-        <button class="close-btn" onclick="closeFormModal()">×</button>
-        <form id="roommateForm">
-          <input type="text" name="name" placeholder="Name" required>
-          <input type="email" name="email" placeholder="Email" required>
-          <input type="text" name="phone" placeholder="Phone" required>
-          <input type="text" name="semester" placeholder="Semester">
-          <input type="text" name="apt" placeholder="Apartment/Dorm">
-          <input type="text" name="rent" placeholder="Rent">
-          <input type="text" name="utilities" placeholder="Utilities">
-          <textarea name="notes" placeholder="Notes / Roommate Preferences"></textarea>
-          <input type="text" name="secret" placeholder="PIN" required>
-          <input type="hidden" name="gender" value="female">
-          <button type="submit">Submit</button>
-        </form>
-      </div>
-    </div>
-    <div class="modal" id="detailModal">
-      <div class="modal-content">
-        <button class="close-btn" onclick="closeDetailModal()">×</button>
-        <div id="modalDetails"></div>
-        <button class="delete-btn" id="modalDeleteBtn">Delete</button>
-      </div>
-    </div>
-  </div>
-  <script>
-    function checkPassword() {
-      if (document.getElementById("sitePassword").value === "Tamusis25!") {
-        document.getElementById("loginBox").style.display = "none";
-        document.getElementById("content").style.display = "block";
-      } else {
-        alert("Incorrect password.");
-      }
-    }
-    const firebaseConfig = {
-      apiKey: "AIzaSyApD08vFd-pktQ_WGolb-TzM3M4bkYZhIM",
-      authDomain: "roomate-finder-e2832.firebaseapp.com",
-      databaseURL: "https://roomate-finder-e2832-default-rtdb.firebaseio.com",
-      projectId: "roomate-finder-e2832",
-      storageBucket: "roomate-finder-e2832.appspot.com",
-      messagingSenderId: "766475126576",
-      appId: "1:766475126576:web:d14cd1ea72217d49392af5",
-      measurementId: "G-QHT4J2MGMZ"
-    };
-    firebase.initializeApp(firebaseConfig);
-    const db = firebase.database();
-    document.getElementById("addBtn").addEventListener("click", () => {
-      document.getElementById("formModal").style.display = "block";
-    });
-    function closeFormModal() {
-      document.getElementById("formModal").style.display = "none";
-    }
-    function closeDetailModal() {
-      document.getElementById("detailModal").style.display = "none";
-    }
-    document.getElementById("roommateForm").addEventListener("submit", function(e) {
-      e.preventDefault();
-      const formData = new FormData(this);
-      const data = {};
-      formData.forEach((value, key) => data[key] = value);
-      db.ref("submissions").push(data).then(() => {
-        alert("Submitted!");
-        this.reset();
-        closeFormModal();
-      });
-    });
-    const tableBody = document.getElementById("submissions");
-    let currentKey = null;
-    let currentEntrySecret = null;
-    db.ref("submissions").on("value", (snapshot) => {
-      tableBody.innerHTML = "";
-      const submissions = snapshot.val();
-      if (submissions) {
-        Object.entries(submissions).forEach(([key, entry]) => {
-          const row = document.createElement("tr");
-          row.innerHTML = `<td>${entry.name || ''}</td><td>${entry.email || ''}</td><td>${entry.phone || ''}</td><td>${entry.semester || ''}</td><td>${entry.apt || ''}</td><td>${entry.rent || ''}</td><td>${entry.utilities || ''}</td><td><button onclick="viewDetails('${key}')">View</button></td>`;
-          tableBody.appendChild(row);
-        });
-      } else {
-        tableBody.innerHTML = "<tr><td colspan='8'><em>No submissions</em></td></tr>";
-      }
-    });
-    function viewDetails(key) {
-      currentKey = key;
-      db.ref("submissions/" + key).once("value").then((snapshot) => {
-        const entry = snapshot.val();
-        currentEntrySecret = entry.secret;
-        const detailDiv = document.getElementById("modalDetails");
-        detailDiv.innerHTML = `<strong>Name:</strong> ${entry.name || ''}<br><strong>Email:</strong> ${entry.email || ''}<br><strong>Phone:</strong> ${entry.phone || ''}<br><strong>Semester:</strong> ${entry.semester || ''}<br><strong>Apt/Dorm:</strong> ${entry.apt || ''}<br><strong>Rent:</strong> ${entry.rent || ''}<br><strong>Utilities:</strong> ${entry.utilities || ''}<br><strong>Notes:</strong> ${entry.notes || ''}`;
-        document.getElementById("detailModal").style.display = "block";
-      });
-    }
-    document.getElementById("modalDeleteBtn").addEventListener("click", () => {
-      const enteredCode = prompt("Enter the secret code to delete this listing:");
-      if (enteredCode === currentEntrySecret) {
-        db.ref("submissions/" + currentKey).remove().then(() => {
-          alert("Deleted!");
-          closeDetailModal();
-        });
-      } else {
-        alert("Incorrect code. Cannot delete.");
-      }
-    });
-  </script>
+<script>
+function checkPassword() {
+  if (document.getElementById("sitePassword").value === "Tamusis25!") {
+    // Show content
+  } else {
+    alert("Incorrect password.");
+  }
+}
+</script>
 </body>
 </html>
